--- a/PlayApp/Templates/PlayApp/T04-publicaciones.html
+++ b/PlayApp/Templates/PlayApp/T04-publicaciones.html
@@ -1,6 +1,7 @@
 {% extends "PlayApp/T01-view.html" %}
 {% load static %}
 {% block ContenidoTemplate %}
+<a href="{% url 'Publicaciones Form' %}" class="button">Hacer una publicacion</a>
 
 {% endblock %}
 
