--- a/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
+++ b/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
@@ -3,9 +3,9 @@
 {% block ContenidoTemplate %}
 
 <body>
-    {% if formulario_p.errors %}
+    <!-- {% if formulario_p.errors %}
         <p style="color: red;">Los datos son incorrectos.</p>
-    {% endif %}
+    {% endif %} -->
 
     <form action="" method="POST">{% csrf_token %}
        <table>
