--- a/PlayApp/Templates/PlayApp/T04.2-publicaciones_busc.html
+++ b/PlayApp/Templates/PlayApp/T04.2-publicaciones_busc.html
@@ -15,6 +15,9 @@
     </ul>
     {% endif %}
     
+    <a href="{% url 'Comentarios'  %}">Nuevo Comentario</a> 
+
+    <br><br><a href="{% url 'Lista Comentarios'  %}">Ver Comentarios</a> 
 </body>
 
 
