--- a/PlayApp/Templates/PlayApp/T06.1-comentarios_lista.html
+++ b/PlayApp/Templates/PlayApp/T06.1-comentarios_lista.html
@@ -5,7 +5,7 @@
 
     <h2>Comentarios</h2>
     <ul>
-        {% for comentario in object_list %} #En este caso el contecto es un listado object_list
+        {% for comentario in object_list %} 
 
             <li>
                 <p>COMENTARIO: {{ comentario.comentario }} </p>
