--- a/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
+++ b/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
@@ -12,7 +12,7 @@
             {{ formulario_p.as_table}}
        </table>
         
-       <input type="submit" value="Publicar">
+       <br><br><input type="submit" value="Publicar">
         
     </form>
     
