--- a/PlayApp/Templates/PlayApp/T04.2-publicaciones_busc.html
+++ b/PlayApp/Templates/PlayApp/T04.2-publicaciones_busc.html
@@ -15,7 +15,7 @@
     </ul>
     {% endif %}
     
-    <a href="{% url 'Comentarios'  %}">Nuevo Comentario</a> 
+    <a href="{% url 'Crear Comentarios'  %}">Nuevo Comentario</a> 
 
     <br><br><a href="{% url 'Lista Comentarios'  %}">Ver Comentarios</a> 
 </body>
