--- a/PlayApp/Templates/PlayApp/T06.2-comentarios_form.html
+++ b/PlayApp/Templates/PlayApp/T06.2-comentarios_form.html
@@ -5,11 +5,11 @@
 
 
     <form method="post">{% csrf_token %}
-        <table>
-            {{ formulario_c.as_table}}
-       </table>
+        
+        {{ form.as_p}}
+        
        
-        <input type="submit" value="Actualizar Comentario" />
+        <input type="submit" value="Enviar" />
     </form>
 
 
