--- a/PlayApp/Templates/PlayApp/T06.3-comentarios_detalle.html
+++ b/PlayApp/Templates/PlayApp/T06.3-comentarios_detalle.html
@@ -5,7 +5,7 @@
 
 
 
-    <p>Nombre del Usuario: <i>{{ cometario.nombre }}</i></p>
+    <p>Nombre del Usuario: <i>{{ comentario.nombre }}</i></p>
     <p>Comentario: <i>{{ comentario.comentario }}</i></p>
     <p>Fecha de Publicacion: <i>{{ comentario.fecha }}</i></p>
     <p>
