--- a/PlayApp/Templates/PlayApp/T06.1-comentarios_lista.html
+++ b/PlayApp/Templates/PlayApp/T06.1-comentarios_lista.html
@@ -21,7 +21,8 @@
     </ul>
 
     <a href="{% url 'Crear Comentarios'  %}">Nuevo Comentario</a>  
-
+    
+    <br><br><input type = "button" value = "Volver" onclick = "history.back()">
 
 </body>
 {% endblock %}
