--- a/PlayApp/Templates/PlayApp/T01-view.html
+++ b/PlayApp/Templates/PlayApp/T01-view.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Usuario' %}">Ingrese</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Publicaciones' %}">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Sobre Nosotros' %}">Sobre Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Usuario Logout' %}">Cerrar sesión</a></li>
                     </ul>
                 </div>
             </div>
