--- a/PlayApp/Templates/PlayApp/T03.1-usuario_form.html
+++ b/PlayApp/Templates/PlayApp/T03.1-usuario_form.html
@@ -7,9 +7,23 @@
     
     <form action="" method="POST">{% csrf_token %}
        
-           {{form.as_p}}
+           
        
-        
+        {% for campo in usuario_formulario %}
+            <p>
+                {{campo.label_tag}}
+                {{campo}}
+
+                {% if campo.help_text %}
+                    <small style="color:darkslategray;"><br>{{campo.help_text}}</small>
+                {% endif %}
+
+                
+                {% for error in campo.errors %}
+                    <p style="color: firebrick;"><br>{{error}}</p>
+                {% endfor %}
+            </p>
+        {% endfor %}    
        <input type="submit" value="Crear">
     </form>
 </body>
