--- a/PlayApp/Templates/PlayApp/T04-publicaciones.html
+++ b/PlayApp/Templates/PlayApp/T04-publicaciones.html
@@ -5,7 +5,7 @@
 <h1 style="color:darkorange">ÚLTIMOS TITULARES</h1>
 {% for object in publis %}
     <ul>
-        <h2><a href="{% url 'Detalle Publicaciones' object.id %}">{{object.titulo}}</a></h2>
+        <h2><a href="{% url 'Detalle Publicaciones' object.slug %}">{{object.titulo}}</a></h2>
         <h4>{{object.nombre}}</h4>
     </ul>
 {% endfor %}
