--- a/PlayApp/Templates/PlayApp/T02-inicio.html
+++ b/PlayApp/Templates/PlayApp/T02-inicio.html
@@ -12,12 +12,12 @@
                         {% for object in publis %}
                             
                             <div class="post-preview">
-                                
+                                <!-- <hr/>                -->
                                 <h1 class="post-title"><a href="{% url 'Detalle Publicaciones' object.slug %}">{{object.titulo}}</a></h1>
                                 <p class="post-subtitle">{{object.subtitulo}}</p>
                                 <img src="http://127.0.0.1:8000/PlayApp{{ object.imagen.url }}" style="max-height:100px">
-                                <p class="autor">{{object.autor}} <br><br><br><br></p>
-                                
+                                <p class="autor">{{object.autor}} <br></p>
+                                <hr/>
                             </div>
                         {% endfor %}
                 </div>            
