--- a/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
+++ b/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
@@ -4,8 +4,8 @@
 
 <body>
     
-    <div class="form-group">
-        <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+    <div class="form-group" style="height:auto; margin: 0 auto; text-align:center;">
+        <form action="" method="POST" enctype="multipart/form-data" style="width:45%; margin: 0 auto;">{% csrf_token %}
     
             <p>
                 {{formulario_p.media}}
