--- a/PlayApp/Templates/PlayApp/T03.1-usuario_form.html
+++ b/PlayApp/Templates/PlayApp/T03.1-usuario_form.html
@@ -24,7 +24,7 @@
                 {% endfor %}
             </p>
         {% endfor %}    
-       <input type="submit" value="Crear">
+       <input class="btn btn-success btn-lg active" type="submit" value="Crear">
     </form>
 </body>
 
