--- a/PlayApp/Templates/PlayApp/T03.2-usuario_detalle.html
+++ b/PlayApp/Templates/PlayApp/T03.2-usuario_detalle.html
@@ -24,7 +24,7 @@
                 {% endfor %}
             </p>
         {% endfor %}    
-       <input type="submit" value="Guardar Cambios">
+       <input class="btn btn-success btn-lg active" type="submit" value="Guardar Cambios">
     </form>
 </body>
 
