--- a/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
+++ b/PlayApp/Templates/PlayApp/T04.1-publicaciones_form.html
@@ -12,7 +12,7 @@
                 {{formulario_p.as_p|safe}}
             </p>
     
-            <br><br><input type="submit" value="Publicar"> 
+            <br><br><input class="btn btn-success btn-lg active" type="submit" value="Publicar"> 
         </form>
     </div>
     
