--- a/PlayApp/Templates/PlayApp/T04.2-publicaciones_busc.html
+++ b/PlayApp/Templates/PlayApp/T04.2-publicaciones_busc.html
@@ -14,8 +14,7 @@
     </ol>
     {% endif %}
 
-    <br><br>
-    <input type = "button" value = "Volver" onclick = "history.back()">
+    <br><br><input class="btn btn-danger" type="button" value="Volver" onclick="history.back()">
 
 </body>
 
