--- a/PlayApp/Templates/PlayApp/T06-comentarios.html
+++ b/PlayApp/Templates/PlayApp/T06-comentarios.html
@@ -9,7 +9,7 @@
             {{ formulario_c.as_table}}
         </table>
        
-        <input type="submit" value="Crear Comentario" />
+        <input class="btn btn-primary" type="submit" value="Crear Comentario" />
     </form>
 
 
