--- a/PlayApp/Templates/PlayApp/T06.4-comentarios_confirm_delete.html
+++ b/PlayApp/Templates/PlayApp/T06.4-comentarios_confirm_delete.html
@@ -5,7 +5,7 @@
 <body>
     <form method="post">{% csrf_token %}
         ¿Estás seguro que deseas borrar el comentario "{{ object }}"?
-        <input type="submit" value="Borrar" />
+        <input class="btn btn-primary" type="submit" value="Borrar" />
     </form>
 </body>
 
