--- a/PlayApp/Templates/PlayApp/T04.4-publicaciones_update.html
+++ b/PlayApp/Templates/PlayApp/T04.4-publicaciones_update.html
@@ -15,7 +15,7 @@
             {{formulario_p.as_p|safe}}
         </p>
 
-        <br><br><input type="submit" value="Publicar"> <input type="button" value="Volver" onclick="history.back()">
+        <br><br><input class="btn btn-success" type="submit" value="Publicar"> <input class="btn btn-danger" type="button" value="Volver" onclick="history.back()">
     </form>
 </body>
 
