--- a/PlayApp/Templates/PlayApp/T06.1-comentarios_lista.html
+++ b/PlayApp/Templates/PlayApp/T06.1-comentarios_lista.html
@@ -22,7 +22,7 @@
 
     <a href="{% url 'Crear Comentarios'  %}">Nuevo Comentario</a>  
     
-    <br><br><input type = "button" value = "Volver" onclick = "history.back()">
+    <br><br><input class="btn btn-primary" type="button" value="Volver" onclick="history.back()">
 
 </body>
 {% endblock %}
