--- a/PlayApp/Templates/PlayApp/T06.2-comentarios_form.html
+++ b/PlayApp/Templates/PlayApp/T06.2-comentarios_form.html
@@ -9,7 +9,7 @@
         {{ form.as_p}}
         
        
-        <input type="submit" value="Enviar" />
+        <input class="btn btn-primary" type="submit" value="Enviar" />
     </form>
 
 
