Playground-V3.4-About-Ok

--- a/PlayApp/Templates/PlayApp/T05-sobre_nosotros.html
+++ b/PlayApp/Templates/PlayApp/T05-sobre_nosotros.html
@@ -1,5 +1,32 @@
 {% extends "PlayApp/T01-view.html" %}
 {% load static %}
 {% block ContenidoTemplate %}
-
+<body>
+    <main class="mb-4">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <h2 style="color: darkcyan;">¿Qué es NotiBlog?</h2>
+                    <p>NotiBlog es un blog que busca mantener informado al usuario con las noticias mas relevantes de las ultimas horas.</p>
+                    <p>En Notiblog buscamos que el usuario pueda leer, opinar y debatir con el resto de la comunidad acerca de las diferentes noticias que publican nuestro Autores Epecializados.</p>
+                    <hr>
+                    <h2 style="color: aquamarine;">¿Quiénes Somos?</h2>
+                    <p>Los creadores y administradores de Notiblog somos: 
+                        <br><br>#Juan Siro
+                        <br>#Leandro Pugliese
+                        <br>#Lucas Maciel
+                    </p>
+                    <p> <br> Los tres somos estudiantes de programacion web en "Coder House".</p>
+                    <hr>
+                    <h2 style="color: darkseagreen;">¿Porqué creamos Notiblog?</h2>
+                    <p>Notiblog comenzó como proyecto final del curso, en el cual debíamos crear una web estilo blog utilizando Python como lenguaje de programación y Django como Framework.</p>
+                    <p>
+                        Como nos encariñamos con el proyecto y vimos que podia ser de ayuda en un ambiente donde hay muchisima información falsa dando vueltas como lo es el ambiente de las noticias.
+                        Nos propusimos buscar periodistas que por vocación quisieran brindar información actual y verídica para ayudarnos con este proyecto.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
+   
 {% endblock %}
