--- a/PlayApp/Templates/PlayApp/T06-comentarios.html
+++ b/PlayApp/Templates/PlayApp/T06-comentarios.html
@@ -4,7 +4,7 @@
 <body>
 
 
-    <form method="post">{% csrf_token %}
+    <form method="POST">{% csrf_token %}
         <table>
             {{ formulario_c.as_table}}
         </table>
