--- a/PlayApp/Templates/PlayApp/T06.2-comentarios_form.html
+++ b/PlayApp/Templates/PlayApp/T06.2-comentarios_form.html
@@ -6,7 +6,7 @@
 
     <form method="post">{% csrf_token %}
         
-        {{ form.as_p}}
+        {{ formulario_c.as_p }}
         
        
         <input class="btn btn-primary" type="submit" value="Enviar" />
