--- a/PlayApp/Templates/PlayApp/T06.4-comentarios_confirm_delete.html
+++ b/PlayApp/Templates/PlayApp/T06.4-comentarios_confirm_delete.html
@@ -4,8 +4,8 @@
 
 <body>
     <form method="post">{% csrf_token %}
-        ¿Estás seguro que deseas borrar el comentario "{{ object }}"?
-        <input class="btn btn-primary" type="submit" value="Borrar" />
+        ¿Estás seguro que deseas borrar el comentario "{{ object.comentario }}"?
+        <input class="btn btn-danger" type="submit" value="Borrar" />
     </form>
 </body>
 
