Playground-V3.7-Password.Ok

--- a/PlayApp/Templates/PlayApp/T02-inicio.html
+++ b/PlayApp/Templates/PlayApp/T02-inicio.html
@@ -10,7 +10,7 @@
                 <div class="col-md-5 col-lg-5 col-xl-6">
                     
                     <div class="p-5 text-center bg-auto">
-                        <h1 class="mb-3" style="color:darkorange"><u>ÚLTIMOS</u> <u>TITULARES</u></h1>
+                        <h1 class="mb-3" style="color:darkorange"><u>ÚLTIMOS TITULARES</u></h1>
                     </div>
                         
                     {% for object in publis %}
