--- a/PlayApp/Templates/PlayApp/T01-view.html
+++ b/PlayApp/Templates/PlayApp/T01-view.html
@@ -31,8 +31,16 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Publicaciones' %}">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Sobre Nosotros' %}">Sobre Nosotros</a></li>
                         {% if request.user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Usuario Update' %}">Modificar Datos</a></li>
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Usuario Logout' %}">Cerrar sesión ({{request.user.username}})</a></li>
+                            <li class="nav-item dropdown dropend">
+                                <a class="nav-link dropdown-toggle px-lg-3 py-3 py-lg-4" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    ({{request.user.username}})
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="#">Tu actividad</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'Usuario Update' %}">Modificar Datos</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'Usuario Logout' %}">Cerrar sesión</a></li>
+                                </ul>
+                            </li>
                         {% else %}
                             <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Usuario' %}">Ingrese</a></li>
                         {% endif %}
